--- a/config-feign.yml
+++ b/config-feign.yml
@@ -11,7 +11,7 @@ eureka:
   client:
     register-with-eureka: false  #不在eureka注册自己
     service-url:
-     defaultZone: http://localhost:7001/eureka/,http://localhost:7002/eureka/,http://localhost:7003/eureka/
+     defaultZone: http://localhost:7001/eureka/
 #开启降级
 feign:
   hystrix:
@@ -26,7 +26,7 @@ eureka:
   client:
     register-with-eureka: false  #不在eureka注册自己
     service-url:
-     defaultZone: http://localhost:7001/eureka/,http://localhost:7002/eureka/,http://localhost:7003/eureka/
+     defaultZone: http://localhost:7001/eureka/
 #开启降级
 
 feign:
