--- a/config-zuul.yml
+++ b/config-zuul.yml
@@ -12,7 +12,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
+      defaultZone: http://eureka7001.com:7001/eureka/
   instance:
     instance-id: zuul9001.com
     prefer-ip-address: true
@@ -35,12 +35,12 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
+      defaultZone: http://eureka7001.com:7001/eureka/
   instance:
     instance-id: zuul9001.com
     prefer-ip-address: true
 info:
-  app.name: joy
+  app.name: sjt
 zuul:
   routes:
     mydept.serviceId: springcloud-provider-emp
